[package]
name = "orbit"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = "0.11.9"
rand = "0.9.2"
rcgen = "0.14.5"
rkyv = "0.8.12"
rustls = { version = "0.23.35", features = ["ring"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }

[build-dependencies]
capnpc = "0.23.0"
